CREATE DATABASE IF NOT EXISTS zync;
USE zync;

CREATE TABLE IF NOT EXISTS usuarios (
  id INT AUTO_INCREMENT PRIMARY KEY,
  nome VARCHAR(120) NOT NULL,
  email VARCHAR(160) NOT NULL UNIQUE,
  senha_hash VARCHAR(255) NOT NULL,
  criado_em TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
  reset_token_hash VARCHAR(64) NULL,
  reset_token_expira DATETIME NULL,
  is_admin BOOLEAN NOT NULL DEFAULT FALSE
);

CREATE TABLE IF NOT EXISTS leads (
  id INT AUTO_INCREMENT PRIMARY KEY,
  usuario_id INT NOT NULL,
  nome VARCHAR(120) NOT NULL,
  servico VARCHAR(120),
  origem VARCHAR(60),
  telefone VARCHAR(20),
  status ENUM('novo', 'em_contato', 'proposta_enviada', 'fechado') DEFAULT 'novo',
  valor DECIMAL(10,2),
  criado_em TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
  fechado_em DATETIME NULL,
  FOREIGN KEY (usuario_id) REFERENCES usuarios(id),
  UNIQUE KEY idx_leads_usuario_telefone (usuario_id, telefone),
  KEY idx_leads_usuario_criado (usuario_id, criado_em)
);

CREATE TABLE IF NOT EXISTS mensagens (
  id INT AUTO_INCREMENT PRIMARY KEY,
  lead_id INT NOT NULL,
  conteudo TEXT NOT NULL,
  enviado_por ENUM('ia', 'humano', 'cliente') NOT NULL,
  criado_em TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
  FOREIGN KEY (lead_id) REFERENCES leads(id) ON DELETE CASCADE,
  KEY idx_mensagens_lead_criado (lead_id, criado_em)
);

CREATE TABLE IF NOT EXISTS tags (
  id INT AUTO_INCREMENT PRIMARY KEY,
  usuario_id INT NOT NULL,
  nome VARCHAR(60) NOT NULL,
  criado_em TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
  FOREIGN KEY (usuario_id) REFERENCES usuarios(id),
  UNIQUE KEY idx_tags_usuario_nome (usuario_id, nome)
);

CREATE TABLE IF NOT EXISTS lead_tags (
  lead_id INT NOT NULL,
  tag_id INT NOT NULL,
  PRIMARY KEY (lead_id, tag_id),
  FOREIGN KEY (lead_id) REFERENCES leads(id) ON DELETE CASCADE,
  FOREIGN KEY (tag_id) REFERENCES tags(id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS agendamentos (
  id INT AUTO_INCREMENT PRIMARY KEY,
  usuario_id INT NOT NULL,
  lead_id INT NOT NULL,
  servico VARCHAR(120),
  data_hora DATETIME NOT NULL,
  status ENUM('agendado', 'confirmado', 'cancelado', 'concluido') DEFAULT 'agendado',
  criado_em TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
  FOREIGN KEY (usuario_id) REFERENCES usuarios(id),
  FOREIGN KEY (lead_id) REFERENCES leads(id) ON DELETE CASCADE,
  KEY idx_agendamentos_usuario_data (usuario_id, data_hora)
);

CREATE TABLE IF NOT EXISTS logs_atividade (
  id INT AUTO_INCREMENT PRIMARY KEY,
  usuario_id INT NOT NULL,
  lead_id INT,
  acao VARCHAR(60) NOT NULL,
  detalhes JSON,
  criado_em TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
  FOREIGN KEY (usuario_id) REFERENCES usuarios(id),
  FOREIGN KEY (lead_id) REFERENCES leads(id) ON DELETE SET NULL,
  KEY idx_logs_usuario_criado (usuario_id, criado_em)
);

CREATE TABLE IF NOT EXISTS notificacoes (
  id INT AUTO_INCREMENT PRIMARY KEY,
  usuario_id INT NOT NULL,
  lead_id INT,
  tipo VARCHAR(40) NOT NULL,
  mensagem VARCHAR(255) NOT NULL,
  lida BOOLEAN NOT NULL DEFAULT FALSE,
  criado_em TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
  FOREIGN KEY (usuario_id) REFERENCES usuarios(id),
  FOREIGN KEY (lead_id) REFERENCES leads(id) ON DELETE CASCADE,
  KEY idx_notificacoes_usuario_lida_criado (usuario_id, lida, criado_em)
);

CREATE TABLE IF NOT EXISTS planos (
  id INT AUTO_INCREMENT PRIMARY KEY,
  nome VARCHAR(60) NOT NULL,
  preco DECIMAL(10,2) NOT NULL,
  intervalo_dias INT NOT NULL DEFAULT 30,
  ativo BOOLEAN NOT NULL DEFAULT TRUE,
  criado_em TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE IF NOT EXISTS assinaturas (
  id INT AUTO_INCREMENT PRIMARY KEY,
  usuario_id INT NOT NULL,
  plano_id INT NOT NULL,
  status ENUM('pendente', 'ativa', 'cancelada', 'expirada') NOT NULL DEFAULT 'pendente',
  syncpay_identifier VARCHAR(60),
  pix_code TEXT,
  valor DECIMAL(10,2) NOT NULL,
  expira_em DATETIME,
  criado_em TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
  atualizado_em TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  FOREIGN KEY (usuario_id) REFERENCES usuarios(id),
  FOREIGN KEY (plano_id) REFERENCES planos(id),
  UNIQUE KEY idx_assinaturas_syncpay_identifier (syncpay_identifier)
);
